# rules_elixir_mix

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  NOTICE  README.md  SECURITY.md  SUPPORT.md  defs.bzl  repository_integrity.bzl
.bcr/: config.yml  metadata.template.json  presubmit.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  support_question.yml
.github/workflows/: codeql.yml  dependency-review.yml  publish-bcr.yml  release.yml  scorecard.yml  source-catalog.yml  test.yaml  trivy.yml
bzlmod/: BUILD.bazel  mix_lock_test_support.bzl  packages.bzl  toolchains.bzl  versions.bzl
bzlmod/private/: BUILD.bazel  common.bzl  elixir_packages.bzl  hex_archive.bzl  hex_package.bzl  hex_pm.bzl  mix_deps_repo.bzl  mix_lock.bzl
docs/: README.md  attribution.md  concepts.md  getting_started.md  mix.md  prebuilt_toolchains.md  publishing.md  releases.md  rules.md  source_toolchains.md
docs/agents/: README.md
e2e/bcr/: BUILD.bazel  MODULE.bazel  smoke.bzl
examples/basic/: BUILD.bazel  MODULE.bazel  mix.exs
examples/plug-sample/: BUILD.bazel  MODULE.bazel
integration/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  generated_asset.bzl  mix.exs  otp_runtime_fixture.bzl
integration/config/: config.exs  dev.exs  prod.exs  test.exs
integration/dialyzer_fixture/: BUILD.bazel  mix.exs
integration/dialyzer_fixture/lib/: dialyzer_fixture.ex
integration/erlang/: common_test.config  direct_fixture.erl  direct_fixture_SUITE.erl  type_consumer.erl  type_contract.erl
integration/erlang/direct_fixture_SUITE_data/: payload.txt
integration/escript_fixture/: mix.exs
integration/escript_fixture/lib/: escript_fixture.ex
integration/format_dep_fixture/: .formatter.exs  mix.exs
integration/lib/: integration.ex  integration_web.ex
integration/lib/integration/: application.ex  renderable.ex
integration/lib/integration_web/: counter_live.ex  endpoint.ex  router.ex
integration/priv/static/: app.js
integration/source_catalog_fixture/: .formatter.exs  .formatter.import_deps.exs  format_import_deps.exs  mix.exs
integration/test/: integration_test.exs  live_view_test.exs
private/: BUILD.bazel  artifact_normalizer.erl  beam_info.bzl  common_test_driver.erl  crypto_release_activation.exs  crypto_release_enforcement.exs  dialyzer.bzl  elixir_bootstrap.bzl  elixir_build_driver.erl  elixir_info.bzl  elixir_prebuilt_release.bzl  elixir_priv.bzl  elixir_protocols.bzl  elixir_source.bzl  elixir_source_release.bzl  elixir_toolchain.bzl  erlang_app.bzl  erlang_app_driver.erl  erlang_test.bzl  fips_runtime_test.bzl  fips_runtime_test.erl  hex_package_assets.bzl  hex_package_info.bzl  mix_escript.bzl  mix_execution.bzl  mix_format.bzl  mix_info.bzl  mix_library.bzl  mix_local.bzl  mix_local_driver.erl  mix_phx_assets.bzl  mix_release.bzl  mix_task.bzl  mix_test.bzl  native_build.bzl  otp_build_driver.erl  otp_crypto_sdk.bzl  otp_prebuilt_release.bzl  otp_runtime_rejection_test.bzl  otp_runtime_rejection_test.erl  (+11 more)
repositories/: BUILD.bazel  BUILD_elixir_prebuilt.tpl  BUILD_elixir_source.tpl  elixir_config.bzl  prebuilt_archive.bzl  source_archive.bzl
source_integration/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  mix.exs  rules_fips_sdk.bzl
source_integration/config/: runtime.exs
source_integration/lib/: source_integration_app_web.ex
source_integration/lib/source_integration_app/: application.ex  escript.ex
source_integration/lib/source_integration_app_web/: counter_live.ex  endpoint.ex  router.ex
source_integration/test/: source_integration_app_web_test.exs
test/: BUILD.bazel  analysis_cc_toolchain.bzl  analysis_tests.bzl  mix.exs
test/fixtures/compile_dep/: mix.exs
test/fixtures/compile_dep/lib/: compile_only_dep.ex
test/fixtures/runtime_consumer/: mix.exs
test/fixtures/runtime_consumer/lib/: runtime_consumer.ex
test/fixtures/runtime_consumer/test/: runtime_consumer_test.exs
test/lib/: analysis_fixture.ex  analysis_protocol.ex
test/priv/static/: app.js
test/runtime/elixir/lib/elixir/ebin/: Elixir.Kernel.beam
test/runtime/elixir/lib/mix/ebin/: Elixir.Mix.beam
test/runtime/otp/lib/kernel-11.0.3/ebin/: kernel.app
test/src/: analysis_fixture.erl  analysis_fixture_SUITE.erl  artifact_normalizer_tests.erl  runtime_archive_driver_tests.erl
test/test/: analysis_fixture_second_test.exs  analysis_fixture_test.exs
tools/: BUILD.bazel  source_catalog.ex  source_catalog_test.exs  update_source_catalog.exs
tools/buildifier/: BUILD.bazel
