exports_files(["MODULE.bazel"])

platform(
    name = "ci_execution_platform_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    exec_properties = {
        "Arch": "amd64",
        "OSFamily": "linux",
    },
)

platform(
    name = "ci_execution_platform_arm64",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
    exec_properties = {
        "Arch": "arm64",
        "OSFamily": "linux",
    },
)

alias(
    name = "buildifier.fix",
    actual = "//tools/buildifier:buildifier.fix",
)

test_suite(
    name = "buildifier_test",
    tests = ["//tools/buildifier:buildifier_test"],
)

toolchain_type(
    name = "otp_toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)
