module(
    name = "rules_elixir_mix",
    version = "0.1.0",
    bazel_compatibility = [">=9.2.0"],
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.5.1.3",
    dev_dependency = True,
)

bazel_dep(
    name = "rules_cc",
    version = "0.2.22",
)

register_toolchains(
    "//test:otp_toolchain",
    "//test:toolchain",
    dev_dependency = True,
)
