load(
    "@rules_elixir_mix//:defs.bzl",
    "dialyzer_plt",
    "elixir_dialyzer_test",
    "elixir_generated_source",
    "elixir_protocols",
    "elixir_release_test",
    "erlang_app",
    "erlang_common_test",
    "erlang_eunit_test",
    "mix_coverage_test",
    "mix_credo_test",
    "mix_format_test",
    "mix_library",
    "mix_local",
    "mix_phx_assets",
    "mix_release",
    "mix_sobelow_test",
    "mix_task_test",
    "mix_test",
    "mix_typecheck_test",
    "mix_xref_test",
)
load("@rules_elixir_mix//test:analysis_tests.bzl", "fingerprint_equality_test")
load(":generated_asset.bzl", "generated_asset")

filegroup(
    name = "lazy_html_nif",
    srcs = select({
        "@platforms//cpu:arm64": ["@lazy_html_nif_arm64_linux_gnu//file"],
        "@platforms//cpu:x86_64": ["@lazy_html_nif_x86_64_linux_gnu//file"],
    }),
    visibility = ["//visibility:public"],
)

erlang_app(
    name = "direct_erlang_app",
    srcs = [
        "erlang/direct_fixture.erl",
        "erlang/direct_fixture_SUITE.erl",
        "@rules_elixir_mix//private:artifact_normalizer.erl",
        "@rules_elixir_mix//private:runtime_archive_driver.erl",
        "@rules_elixir_mix//test:src/artifact_normalizer_tests.erl",
        "@rules_elixir_mix//test:src/runtime_archive_driver_tests.erl",
    ],
    app_name = "direct_erlang_app",
    version = "0.1.0",
)

erlang_eunit_test(
    name = "direct_erlang_eunit_test",
    apps = [":direct_erlang_app"],
)

erlang_common_test(
    name = "direct_erlang_common_test",
    apps = [":direct_erlang_app"],
    config = ["erlang/common_test.config"],
    groups = ["values"],
    repeat = 2,
    suite_data = {
        "erlang/direct_fixture_SUITE_data/payload.txt": "direct_fixture_SUITE/payload.txt",
    },
    suites = ["direct_fixture_SUITE"],
)

erlang_app(
    name = "direct_erlang_reproducibility_a",
    srcs = ["erlang/direct_fixture.erl"],
    app_name = "direct_erlang_reproducibility",
    version = "0.1.0",
)

erlang_app(
    name = "direct_erlang_reproducibility_b",
    srcs = ["erlang/direct_fixture.erl"],
    app_name = "direct_erlang_reproducibility",
    version = "0.1.0",
)

fingerprint_equality_test(
    name = "direct_erlang_reproducibility_test",
    left = ":direct_erlang_reproducibility_a",
    right = ":direct_erlang_reproducibility_b",
)

erlang_app(
    name = "type_contract",
    srcs = ["erlang/type_contract.erl"],
    app_name = "type_contract",
    version = "0.1.0",
)

erlang_app(
    name = "type_consumer",
    srcs = ["erlang/type_consumer.erl"],
    app_name = "type_consumer",
    type_deps = [":type_contract"],
    version = "0.1.0",
)

# The prebuilt VM's native shared-library closure is part of the immutable
# execution image contract. Its digest is therefore present in Bazel's
# execution-platform properties and in toolchain resolution, not merely in CI.
constraint_setting(
    name = "execution_image",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "elixir_otp29_elixir120_x86_64",
    constraint_setting = ":execution_image",
    visibility = ["//visibility:public"],
)

platform(
    name = "ci_execution_platform_x86_64",
    constraint_values = [
        ":elixir_otp29_elixir120_x86_64",
        "@elixir_config//:runtime_otp29_elixir120_x86_64",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    exec_properties = {
        "Arch": "amd64",
        "OSFamily": "linux",
        "container-image": "docker://elixir@sha256:d430c98a3ba7c97bdfe688e29e8c4378966519c79af04963cc9276f7f2013ecc",
    },
)

constraint_value(
    name = "elixir_otp29_elixir120_arm64",
    constraint_setting = ":execution_image",
    visibility = ["//visibility:public"],
)

platform(
    name = "ci_execution_platform_arm64",
    constraint_values = [
        ":elixir_otp29_elixir120_arm64",
        "@elixir_config//:runtime_otp29_elixir120_arm64",
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
    exec_properties = {
        "Arch": "arm64",
        "OSFamily": "linux",
        "container-image": "docker://elixir@sha256:d430c98a3ba7c97bdfe688e29e8c4378966519c79af04963cc9276f7f2013ecc",
    },
)

mix_library(
    name = "lib",
    srcs = glob(["lib/**/*.ex"]),
    app_name = "integration",
    compile_deps = [
        "@mix_deps//:credo",
        "@mix_deps//:dialyxir",
        "@mix_deps//:sobelow",
        "@mix_deps//:wallaby",
    ],
    config = glob(["config/*.exs"]),
    generated_srcs = [":mapped_generated_elixir"],
    lockfile = "mix.lock",
    mix_config = "mix.exs",
    mix_env = "test",
    priv = glob(["priv/**"]),
    runtime_deps = [
        "@mix_deps//:bandit",
        "@mix_deps//:ecto_sql",
        "@mix_deps//:jason",
        "@mix_deps//:lazy_html",
        "@mix_deps//:phoenix",
        "@mix_deps//:phoenix_html",
        "@mix_deps//:phoenix_live_view",
        "@mix_deps//:postgrex",
    ],
)

mix_test(
    name = "test",
    srcs = glob(["test/**/*.exs"]),
    lib = ":lib",
)

mix_coverage_test(
    name = "coverage",
    srcs = glob(["test/**/*.exs"]),
    lib = ":lib",
)

mix_format_test(
    name = "format",
    srcs = glob([
        "config/*.exs",
        "lib/**/*.ex",
        "test/**/*.exs",
    ]) + ["mix.exs"],
    lib = ":lib",
)

mix_typecheck_test(
    name = "typecheck",
    srcs = glob([
        "config/*.exs",
        "lib/**/*.ex",
    ]) + ["mix.exs"],
    lib = ":lib",
)

mix_xref_test(
    name = "xref",
    srcs = glob(["lib/**/*.ex"]) + ["mix.exs"],
    lib = ":lib",
    xref_args = [
        "graph",
        "--format",
        "stats",
    ],
)

mix_task_test(
    name = "task_test",
    srcs = glob([
        "lib/**/*.ex",
        "test/**/*.exs",
    ]) + [
        "mix.exs",
        "mix.lock",
    ],
    lib = ":lib",
    task = "compile",
    task_args = ["--warnings-as-errors"],
)

mix_credo_test(
    name = "credo",
    srcs = glob([
        "config/*.exs",
        "lib/**/*.ex",
        "test/**/*.exs",
    ]) + [
        "mix.exs",
        "mix.lock",
    ],
    lib = ":lib",
)

mix_sobelow_test(
    name = "sobelow",
    srcs = glob([
        "config/*.exs",
        "lib/**/*.ex",
    ]) + [
        "mix.exs",
        "mix.lock",
    ],
    lib = ":lib",
)

mix_local(
    name = "local",
    lib = ":lib",
    task = "compile",
)

generated_asset(
    name = "generated_static_input",
)

generated_asset(
    name = "generated_elixir_input",
    content = "defmodule Integration.GeneratedByBazel do\n  @moduledoc false\n\n  def value, do: :generated\nend\n",
    filename = "generated_by_bazel.ex",
)

elixir_generated_source(
    name = "mapped_generated_elixir",
    src = ":generated_elixir_input",
    destination = "lib/integration/generated_by_bazel.ex",
)

elixir_generated_source(
    name = "mapped_generated_static_input",
    src = ":generated_static_input",
    destination = "priv/static/generated.txt",
)

mix_phx_assets(
    name = "digested_assets",
    srcs = glob(["priv/static/**"]),
    generated_srcs = [":mapped_generated_static_input"],
    lib = ":lib",
    mix_env = "test",
)

dialyzer_plt(
    name = "plt",
    deps = [
        ":lib",
        ":type_consumer",
    ],
)

elixir_dialyzer_test(
    name = "dialyzer",
    apps = [":lib"],
    plt = ":plt",
)

elixir_dialyzer_test(
    name = "type_deps_dialyzer",
    apps = [":type_consumer"],
    plt = ":plt",
)

mix_library(
    name = "release_lib",
    srcs = glob(["lib/**/*.ex"]),
    app_name = "integration",
    compile_deps = [
        "@mix_deps//:credo",
        "@mix_deps//:dialyxir",
        "@mix_deps//:sobelow",
        "@mix_deps//:wallaby",
    ],
    config = glob(["config/*.exs"]),
    generated_srcs = [":mapped_generated_elixir"],
    lockfile = "mix.lock",
    mix_config = "mix.exs",
    mix_env = "test",
    priv_entries = [":digested_assets"],
    runtime_deps = [
        "@mix_deps//:bandit",
        "@mix_deps//:ecto_sql",
        "@mix_deps//:jason",
        "@mix_deps//:lazy_html",
        "@mix_deps//:phoenix",
        "@mix_deps//:phoenix_html",
        "@mix_deps//:phoenix_live_view",
        "@mix_deps//:postgrex",
    ],
)

elixir_protocols(
    name = "protocols",
    apps = [":release_lib"],
)

mix_release(
    name = "release",
    application = ":release_lib",
    mix_env = "test",
    protocols = ":protocols",
)

elixir_release_test(
    name = "release_test",
    consolidated_protocols = ["Elixir.Integration.Renderable"],
    release = ":release",
    required_file_contents = {
        "lib/integration-0.1.0/priv/static/generated.txt": "generated by a declared Bazel action\n",
    },
    required_paths = [
        "lib/integration-0.1.0/priv/static/cache_manifest.json",
        "lib/integration-0.1.0/priv/static/generated.txt",
    ],
)
