load(
    "@rules_elixir_mix//:defs.bzl",
    "dialyzer_plt",
    "elixir_dialyzer_test",
    "elixir_generated_source",
    "elixir_prebuilt_release",
    "elixir_protocols",
    "elixir_release_test",
    "erlang_app",
    "erlang_common_test",
    "erlang_eunit_test",
    "hex_package_assets",
    "mix_coverage_test",
    "mix_credo_test",
    "mix_deps_update",
    "mix_escript",
    "mix_format",
    "mix_format_test",
    "mix_library",
    "mix_local",
    "mix_phx_assets",
    "mix_release",
    "mix_sobelow_test",
    "mix_task_test",
    "mix_test",
    "mix_typecheck_test",
    "mix_xref_test",
    "otp_prebuilt_release",
    "otp_runtime_rejection_test",
    "otp_runtime_smoke_test",
    "rustler_precompiled_archive",
)
load("@rules_elixir_mix//test:analysis_tests.bzl", "fingerprint_equality_test")
load(":generated_asset.bzl", "escript_codegen", "escript_write", "generated_asset", "javascript_asset")
load(":otp_runtime_fixture.bzl", "unverified_otp_runtime_fixture")

otp_prebuilt_release(
    name = "prebuilt_otp_x86_64",
    srcs = ["@otp_runtime_x86_64//:runtime"],
    boot_file = "@otp_runtime_x86_64//:releases/29/start_clean.boot",
    erlexec = "@otp_runtime_x86_64//:erts-17.0.3/bin/erlexec",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    fully_static = True,
    version = "29.0.3",
    version_marker = "@otp_runtime_x86_64//:releases/29/OTP_VERSION",
    visibility = ["//visibility:public"],
)

otp_prebuilt_release(
    name = "prebuilt_otp_arm64",
    srcs = ["@otp_runtime_arm64//:runtime"],
    boot_file = "@otp_runtime_arm64//:releases/29/start_clean.boot",
    erlexec = "@otp_runtime_arm64//:erts-17.0.3/bin/erlexec",
    exec_compatible_with = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
    fully_static = True,
    version = "29.0.3",
    version_marker = "@otp_runtime_arm64//:releases/29/OTP_VERSION",
    visibility = ["//visibility:public"],
)

elixir_prebuilt_release(
    name = "prebuilt_elixir_x86_64",
    srcs = ["@elixir_runtime//:runtime"],
    home_marker = "@elixir_runtime//:bin/elixir",
    otp = ":prebuilt_otp_x86_64",
    version = "1.20.2",
    version_marker = "@elixir_runtime//:VERSION",
    visibility = ["//visibility:public"],
)

elixir_prebuilt_release(
    name = "prebuilt_elixir_arm64",
    srcs = ["@elixir_runtime//:runtime"],
    home_marker = "@elixir_runtime//:bin/elixir",
    otp = ":prebuilt_otp_arm64",
    version = "1.20.2",
    version_marker = "@elixir_runtime//:VERSION",
    visibility = ["//visibility:public"],
)

otp_runtime_smoke_test(
    name = "prebuilt_otp_smoke_x86_64",
    otp = ":prebuilt_otp_x86_64",
    target_compatible_with = ["@platforms//cpu:x86_64"],
)

otp_runtime_smoke_test(
    name = "prebuilt_otp_smoke_arm64",
    otp = ":prebuilt_otp_arm64",
    target_compatible_with = ["@platforms//cpu:arm64"],
)

unverified_otp_runtime_fixture(
    name = "unverified_prebuilt_otp_arm64",
    srcs = ["@otp_runtime_arm64//:runtime"],
    boot_file = "@otp_runtime_arm64//:releases/29/start_clean.boot",
    erlexec = "@otp_runtime_arm64//:erts-17.0.3/bin/erlexec",
    version = "29.0.3",
    version_marker = "@otp_runtime_arm64//:releases/29/OTP_VERSION",
)

otp_runtime_rejection_test(
    name = "prebuilt_otp_rejection_arm64_on_x86",
    expected_error = "Exec format error",
    otp = ":unverified_prebuilt_otp_arm64",
    target_compatible_with = ["@platforms//cpu:x86_64"],
)

elixir_generated_source(
    name = "source_catalog_module",
    src = "@rules_elixir_mix//tools:source_catalog.ex",
    destination = "lib/source_catalog.ex",
)

elixir_generated_source(
    name = "source_catalog_update_module",
    src = "@rules_elixir_mix//tools:source_catalog.ex",
    destination = "tools/source_catalog.ex",
)

elixir_generated_source(
    name = "source_catalog_update_script",
    src = "@rules_elixir_mix//tools:update_source_catalog.exs",
    destination = "tools/update_source_catalog.exs",
)

elixir_generated_source(
    name = "source_catalog_test_script",
    src = "@rules_elixir_mix//tools:source_catalog_test.exs",
    destination = "test/source_catalog_test.exs",
)

rustler_precompiled_archive(
    name = "source_catalog_rustler_precompiled_archive",
    archive = select({
        "@platforms//cpu:arm64": "source_catalog_fixture/.formatter.exs",
        "@platforms//cpu:x86_64": "source_catalog_fixture/test/test_helper.exs",
    }),
    archive_name = select({
        "@platforms//cpu:arm64": "source-catalog-aarch64.tar.gz",
        "@platforms//cpu:x86_64": "source-catalog-x86_64.tar.gz",
    }),
)

mix_library(
    name = "source_catalog_lib",
    srcs = ["source_catalog_fixture/test/test_helper.exs"],
    app_name = "rules_elixir_mix_source_catalog",
    data = ["source_catalog_fixture/.formatter.exs"],
    generated_srcs = [
        ":source_catalog_module",
        ":source_catalog_test_script",
        ":source_catalog_update_module",
        ":source_catalog_update_script",
    ],
    mix_config = "source_catalog_fixture/mix.exs",
    mix_env = "test",
    rustler_precompiled_artifacts = [":source_catalog_rustler_precompiled_archive"],
)

mix_test(
    name = "source_catalog_test",
    srcs = [
        "source_catalog_fixture/test/test_helper.exs",
        ":source_catalog_test_script",
    ],
    lib = ":source_catalog_lib",
)

mix_format_test(
    name = "source_catalog_format",
    srcs = [],
    lib = ":source_catalog_lib",
)

mix_format(
    name = "source_catalog_format_sources",
    srcs = ["source_catalog_fixture/test/test_helper.exs"],
    formatter_config = "source_catalog_fixture/.formatter.exs",
    mix_config = "source_catalog_fixture/mix.exs",
)

mix_local(
    name = "source_catalog_update",
    env = {
        "SOURCE_CATALOG_PATH": "../../bzlmod/versions.bzl",
    },
    lib = ":source_catalog_lib",
    mix_env = "test",
    network_policy = "online",
    task = "run",
    task_args = ["tools/update_source_catalog.exs"],
)

mix_library(
    name = "minimal_escript_lib",
    srcs = ["escript_fixture/lib/escript_fixture.ex"],
    app_name = "escript_fixture",
    mix_config = "escript_fixture/mix.exs",
    mix_env = "prod",
)

mix_escript(
    name = "minimal_escript",
    lib = ":minimal_escript_lib",
    output_name = "escript_fixture_tool",
)

escript_write(
    name = "minimal_escript_codegen",
    tool = ":minimal_escript",
)

erlang_app(
    name = "direct_erlang_app",
    srcs = [
        "erlang/direct_fixture.erl",
        "erlang/direct_fixture_SUITE.erl",
        "@rules_elixir_mix//private:artifact_normalizer.erl",
        "@rules_elixir_mix//private:runtime_archive_driver.erl",
        "@rules_elixir_mix//test:src/artifact_normalizer_tests.erl",
        "@rules_elixir_mix//test:src/runtime_archive_driver_tests.erl",
    ],
    app_name = "direct_erlang_app",
    version = "0.1.0",
)

erlang_eunit_test(
    name = "direct_erlang_eunit_test",
    apps = [":direct_erlang_app"],
)

erlang_common_test(
    name = "direct_erlang_common_test",
    apps = [":direct_erlang_app"],
    config = ["erlang/common_test.config"],
    groups = ["values"],
    repeat = 2,
    suite_data = {
        "erlang/direct_fixture_SUITE_data/payload.txt": "direct_fixture_SUITE/payload.txt",
    },
    suites = ["direct_fixture_SUITE"],
)

erlang_app(
    name = "direct_erlang_reproducibility_a",
    srcs = ["erlang/direct_fixture.erl"],
    app_name = "direct_erlang_reproducibility",
    version = "0.1.0",
)

erlang_app(
    name = "direct_erlang_reproducibility_b",
    srcs = ["erlang/direct_fixture.erl"],
    app_name = "direct_erlang_reproducibility",
    version = "0.1.0",
)

fingerprint_equality_test(
    name = "direct_erlang_reproducibility_test",
    left = ":direct_erlang_reproducibility_a",
    right = ":direct_erlang_reproducibility_b",
)

erlang_app(
    name = "type_contract",
    srcs = ["erlang/type_contract.erl"],
    app_name = "type_contract",
    version = "0.1.0",
)

erlang_app(
    name = "type_consumer",
    srcs = ["erlang/type_consumer.erl"],
    app_name = "type_consumer",
    type_deps = [":type_contract"],
    version = "0.1.0",
)

# The prebuilt fixture is a statically linked VM. The runtime constraint still
# distinguishes its OTP/Elixir tuple, while the execution platform needs no
# distro image or host libc contract.
constraint_setting(
    name = "execution_image",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "elixir_otp29_elixir120_x86_64",
    constraint_setting = ":execution_image",
    visibility = ["//visibility:public"],
)

platform(
    name = "ci_execution_platform_x86_64",
    constraint_values = [
        ":elixir_otp29_elixir120_x86_64",
        "@elixir_config//:runtime_otp29_elixir120_x86_64",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    exec_properties = {
        "Arch": "amd64",
        "OSFamily": "linux",
    },
)

constraint_value(
    name = "elixir_otp29_elixir120_arm64",
    constraint_setting = ":execution_image",
    visibility = ["//visibility:public"],
)

platform(
    name = "ci_execution_platform_arm64",
    constraint_values = [
        ":elixir_otp29_elixir120_arm64",
        "@elixir_config//:runtime_otp29_elixir120_arm64",
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
    exec_properties = {
        "Arch": "arm64",
        "OSFamily": "linux",
    },
)

mix_library(
    name = "lib",
    srcs = glob(["lib/**/*.ex"]),
    app_name = "integration",
    compile_deps = [
        "@mix_deps//:credo",
        "@mix_deps//:dialyxir",
        "@mix_deps//:sobelow",
        "@mix_deps//:wallaby",
    ],
    config = glob(["config/*.exs"]),
    generated_srcs = [":mapped_generated_elixir"],
    lockfile = "mix.lock",
    mix_config = "mix.exs",
    mix_env = "test",
    priv = glob(["priv/**"]),
    runtime_deps = [
        "@mix_deps//:bandit",
        "@mix_deps//:ecto_sql",
        "@mix_deps//:jason",
        "@mix_deps//:phoenix",
        "@mix_deps//:phoenix_html",
        "@mix_deps//:phoenix_live_view",
        "@mix_deps//:postgrex",
    ],
)

mix_test(
    name = "test",
    srcs = glob(["test/**/*.exs"]),
    lib = ":lib",
)

mix_deps_update(
    name = "update_dependencies",
    hex = "@hex_pm//:lib",
    lib = ":lib",
    mix_env = "test",
)

mix_coverage_test(
    name = "coverage",
    srcs = glob(["test/**/*.exs"]),
    lib = ":lib",
)

mix_format_test(
    name = "format",
    srcs = glob([
        "config/*.exs",
        "lib/**/*.ex",
        "test/**/*.exs",
    ]) + ["mix.exs"],
    lib = ":lib",
)

mix_typecheck_test(
    name = "typecheck",
    srcs = glob([
        "config/*.exs",
        "lib/**/*.ex",
    ]) + ["mix.exs"],
    lib = ":lib",
)

mix_xref_test(
    name = "xref",
    srcs = glob(["lib/**/*.ex"]) + ["mix.exs"],
    lib = ":lib",
    xref_args = [
        "graph",
        "--format",
        "stats",
    ],
)

mix_task_test(
    name = "task_test",
    srcs = glob([
        "lib/**/*.ex",
        "test/**/*.exs",
    ]) + [
        "mix.exs",
        "mix.lock",
    ],
    lib = ":lib",
    task = "compile",
    task_args = ["--warnings-as-errors"],
)

mix_credo_test(
    name = "credo",
    srcs = glob([
        "config/*.exs",
        "lib/**/*.ex",
        "test/**/*.exs",
    ]) + [
        "mix.exs",
        "mix.lock",
    ],
    lib = ":lib",
)

mix_sobelow_test(
    name = "sobelow",
    srcs = glob([
        "config/*.exs",
        "lib/**/*.ex",
    ]) + [
        "mix.exs",
        "mix.lock",
    ],
    lib = ":lib",
)

mix_local(
    name = "local",
    lib = ":lib",
    task = "compile",
)

generated_asset(
    name = "generated_static_input",
)

hex_package_assets(
    name = "locked_live_view_assets",
    package = "@mix_deps//:phoenix_live_view",
    paths = ["priv/static/phoenix_live_view.esm.js"],
)

javascript_asset(
    name = "locked_live_view_javascript",
    src = ":locked_live_view_assets",
)

mix_escript(
    name = "locked_sobelow_escript",
    lib = "@mix_deps//:sobelow",
    output_name = "sobelow",
)

escript_codegen(
    name = "locked_sobelow_codegen",
    srcs = glob([
        "config/*.exs",
        "lib/**/*.ex",
    ]) + ["mix.exs"],
    root = ".",
    router = "lib/integration_web/router.ex",
    tool = ":locked_sobelow_escript",
)

generated_asset(
    name = "generated_elixir_input",
    content = "defmodule Integration.GeneratedByBazel do\n  @moduledoc false\n\n  def value, do: :generated\nend\n",
    filename = "generated_by_bazel.ex",
)

elixir_generated_source(
    name = "mapped_generated_elixir",
    src = ":generated_elixir_input",
    destination = "lib/integration/generated_by_bazel.ex",
)

elixir_generated_source(
    name = "mapped_generated_static_input",
    src = ":generated_static_input",
    destination = "priv/static/generated.txt",
)

mix_phx_assets(
    name = "digested_assets",
    srcs = glob(["priv/static/**"]),
    generated_srcs = [":mapped_generated_static_input"],
    lib = ":lib",
    mix_env = "test",
)

dialyzer_plt(
    name = "plt",
    deps = [
        ":lib",
        ":type_consumer",
    ],
)

elixir_dialyzer_test(
    name = "dialyzer",
    apps = [":lib"],
    plt = ":plt",
)

elixir_dialyzer_test(
    name = "type_deps_dialyzer",
    apps = [":type_consumer"],
    plt = ":plt",
)

mix_library(
    name = "release_lib",
    srcs = glob(["lib/**/*.ex"]),
    app_name = "integration",
    compile_deps = [
        "@mix_deps//:credo",
        "@mix_deps//:dialyxir",
        "@mix_deps//:sobelow",
        "@mix_deps//:wallaby",
    ],
    config = glob(["config/*.exs"]),
    generated_srcs = [":mapped_generated_elixir"],
    lockfile = "mix.lock",
    mix_config = "mix.exs",
    mix_env = "test",
    priv_entries = [":digested_assets"],
    runtime_deps = [
        "@mix_deps//:bandit",
        "@mix_deps//:ecto_sql",
        "@mix_deps//:jason",
        "@mix_deps//:phoenix",
        "@mix_deps//:phoenix_html",
        "@mix_deps//:phoenix_live_view",
        "@mix_deps//:postgrex",
    ],
)

elixir_protocols(
    name = "protocols",
    apps = [":release_lib"],
)

mix_release(
    name = "release",
    application = ":release_lib",
    mix_env = "test",
    protocols = ":protocols",
)

elixir_release_test(
    name = "release_test",
    consolidated_protocols = ["Elixir.Integration.Renderable"],
    release = ":release",
    required_file_contents = {
        "lib/integration-0.1.0/priv/static/generated.txt": "generated by a declared Bazel action\n",
    },
    required_paths = [
        "lib/integration-0.1.0/priv/static/cache_manifest.json",
        "lib/integration-0.1.0/priv/static/generated.txt",
    ],
)
