module(
    name = "rules_elixir_mix_integration",
    version = "0.0.0",
    bazel_compatibility = [">=9.2.0"],
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_elixir_mix", version = "0.3.0")
local_path_override(
    module_name = "rules_elixir_mix",
    path = "..",
)

prebuilt_archive = use_repo_rule(
    "@rules_elixir_mix//repositories:prebuilt_archive.bzl",
    "prebuilt_archive",
)

prebuilt_archive(
    name = "otp_runtime_x86_64",
    archive_type = "tar.gz",
    exported_files = [
        "erts-17.0.3/bin/erlexec",
        "releases/29/OTP_VERSION",
        "releases/29/start_clean.boot",
    ],
    sha256 = "c44ba721fd224a0ca98ae736b2932f84f6c4d9aaf3179aeed5de555ca815d0b4",
    urls = ["https://github.com/gleam-community/erlang-linux-builds/releases/download/OTP-29.0.3/erlang-29.0.3-x64.tar.gz"],
)

prebuilt_archive(
    name = "otp_runtime_arm64",
    archive_type = "tar.gz",
    exported_files = [
        "erts-17.0.3/bin/erlexec",
        "releases/29/OTP_VERSION",
        "releases/29/start_clean.boot",
    ],
    sha256 = "a3b44200d9e2137ad5f133cdc926af804dd8ac217a652802288a8a4424e8e359",
    urls = ["https://github.com/gleam-community/erlang-linux-builds/releases/download/OTP-29.0.3/erlang-29.0.3-arm64.tar.gz"],
)

prebuilt_archive(
    name = "elixir_runtime",
    archive_type = "zip",
    exported_files = [
        "bin/elixir",
        "VERSION",
    ],
    sha256 = "a9e88cd41fbbba7da6f6dc237a49dd2ed4e70457121035cc7fc56ad05582f394",
    urls = ["https://github.com/elixir-lang/elixir/releases/download/v1.20.2/elixir-otp-29.zip"],
)

elixir_config = use_extension(
    "@rules_elixir_mix//bzlmod:toolchains.bzl",
    "elixir_config",
)
elixir_config.prebuilt_toolchain(
    name = "otp29_elixir120_x86_64",
    default = True,
    elixir_home_marker = "bin/elixir",
    elixir_sha256 = "a9e88cd41fbbba7da6f6dc237a49dd2ed4e70457121035cc7fc56ad05582f394",
    elixir_type = "zip",
    elixir_url = "https://github.com/elixir-lang/elixir/releases/download/v1.20.2/elixir-otp-29.zip",
    elixir_version = "1.20.2",
    erlexec = "erts-17.0.3/bin/erlexec",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    otp_boot_file = "releases/29/start_clean.boot",
    otp_fully_static = True,
    otp_sha256 = "c44ba721fd224a0ca98ae736b2932f84f6c4d9aaf3179aeed5de555ca815d0b4",
    otp_type = "tar.gz",
    otp_url = "https://github.com/gleam-community/erlang-linux-builds/releases/download/OTP-29.0.3/erlang-29.0.3-x64.tar.gz",
    otp_version = "29.0.3",
    runtime_abi = "//:elixir_otp29_elixir120_x86_64",
)
elixir_config.prebuilt_toolchain(
    name = "otp29_elixir120_arm64",
    elixir = "//:prebuilt_elixir_arm64",
    elixir_version = "1.20.2",
    exec_compatible_with = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
    otp = "//:prebuilt_otp_arm64",
    otp_version = "29.0.3",
    runtime_abi = "//:elixir_otp29_elixir120_arm64",
)
use_repo(elixir_config, "elixir_config")

register_toolchains(
    "@elixir_config//otp29_elixir120_arm64:otp_toolchain",
    "@elixir_config//otp29_elixir120_arm64:test_toolchain",
    "@elixir_config//otp29_elixir120_arm64:toolchain",
    "@elixir_config//otp29_elixir120_x86_64:otp_toolchain",
    "@elixir_config//otp29_elixir120_x86_64:test_toolchain",
    "@elixir_config//otp29_elixir120_x86_64:toolchain",
)

elixir_packages = use_extension(
    "@rules_elixir_mix//bzlmod:packages.bzl",
    "elixir_packages",
)
elixir_packages.mix_lock(
    name = "mix_deps",
    lockfile = "//:mix.lock",
)
use_repo(elixir_packages, "hex_pm", "mix_deps")
