exports_files([
    "mix_local_driver.erl",
    "artifact_normalizer.erl",
    "common_test_driver.erl",
    "crypto_release_activation.exs",
    "crypto_release_enforcement.exs",
    "elixir_build_driver.erl",
    "erlang_app_driver.erl",
    "fips_runtime_test.erl",
    "otp_build_driver.erl",
    "release_runtime_test.bzl",
    "release_runtime_test.erl",
])
